Bug 328556: Proper accounting for growth in array_join_sub when reallocating chars array. r=mrbkap